<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/btn_white"
    android:padding="15dp" >

        <RatingBar
            android:id="@+id/ratingBar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:isIndicator="true"
            android:paddingTop="20dp"
            android:rating="5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/did_you_enjoy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/did_you_enjoy"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/rate_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:text="@string/rate_us"
                android:textColor="#000000" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="10dp" >

            <Button
                android:id="@+id/lets_go"
                style="@drawable/buttonshape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@drawable/buttonshape"
                android:paddingBottom="8dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="8dp"
                android:shadowColor="#ff888888"
                android:shadowRadius="5"
                android:text="@string/lets_go"
                android:textAllCaps="false"
                android:textColor="#FFFFFFFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/maybe_later"
                style="@drawable/buttonshape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/buttonshape"
                android:paddingBottom="8dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="8dp"
                android:shadowColor="#ff888888"
                android:shadowRadius="5"
                android:text="@string/maybe_later"
                android:textAllCaps="false"
                android:textColor="#FFFFFFFF"
                android:textSize="25sp" />

        </RelativeLayout>

   

</RelativeLayout>
