<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/btn"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/win"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:lines="2"
                android:text="@string/lose"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="35sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:layout_margin="10dp" >

            <Button
                android:id="@+id/mm_btn"
                style="@drawable/buttonshape"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/buttonshape"
                android:shadowColor="#ff888888"
                android:shadowRadius="5"
                android:text="@string/main_menu"
                android:textColor="#FFFFFFFF"
                android:textSize="35sp" />
        </RelativeLayout>
        
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_marginBottom="30dp"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id" >

        </com.google.android.gms.ads.AdView>

    </LinearLayout>

