<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/btn"
        android:gravity="center|top"
        android:orientation="vertical"
        android:paddingTop="45dp" >

        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:gravity="center_vertical" >

            <Button
                android:id="@+id/mm_btn"
                style="@drawable/buttonshape"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/buttonshape"
                android:shadowColor="#ff888888"
                android:shadowRadius="5"
                android:text="@string/continuex"
                android:textColor="#FFFFFFFF"
                android:textSize="35sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:layout_marginBottom="30dp" >

            <Button
                android:id="@+id/mainmenu_btn"
                style="@drawable/buttonshape"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/buttonshape"
                android:shadowColor="#ff888888"
                android:shadowRadius="5"
                android:text="@string/main_menu"
                android:textColor="#FFFFFFFF"
                android:textSize="35sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_unit_id" >

            </com.google.android.gms.ads.AdView>

        </RelativeLayout>

    </LinearLayout>
