<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000" >

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/btn"
    android:gravity="center"
    android:paddingTop="20dp" >

    <RelativeLayout
        android:id="@+id/rl2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/rate_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:drawableLeft="@drawable/coin_noglow"
            android:gravity="center"
            android:text="TextView"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/select_level"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="35sp" />

    </RelativeLayout>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/rl4"
        android:layout_below="@+id/rl2"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal" >

            <RelativeLayout
                android:id="@+id/rl3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/btn"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:paddingLeft="30dp"
                android:paddingRight="35dp"
                android:paddingTop="20dp" >

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/ImageView02"
                    android:layout_alignRight="@+id/ImageView02"
                    android:gravity="center"
                    android:text="@string/space"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/ImageView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/TextView02"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/classic_level" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/ingress_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/btn"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:paddingLeft="30dp"
                android:paddingRight="35dp"
                android:paddingTop="20dp" >

                <TextView
                    android:id="@+id/ingress_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/ingress_level"
                    android:layout_alignRight="@+id/ingress_level"
                    android:gravity="center"
                    android:text="@string/pacworld"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/ingress_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ingress_text"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/pacman_level_locked" />

                <LinearLayout
                    android:id="@+id/l1price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/ingress_level"
                    android:layout_alignRight="@+id/ingress_text"
                    android:layout_below="@id/ingress_level"
                    android:gravity="center" >

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/coin_noglow_small" />

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/first_price"
                        android:textColor="#ffffff"
                        android:textSize="20sp" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/btn"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:paddingLeft="30dp"
                android:paddingRight="35dp"
                android:paddingTop="20dp" >

                <ImageView
                    android:id="@+id/img0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/level_soon" />

                <TextView
                    android:id="@+id/did_you_enjoy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img0"
                    android:layout_centerHorizontal="true"
                    android:text="@string/nothing"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

            </RelativeLayout>
        </LinearLayout>
    </HorizontalScrollView>

    <RelativeLayout
        android:id="@+id/rl4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/horizontalScrollView1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" >

        <Button
            android:id="@+id/mm_btn"
            style="@drawable/buttonshape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/buttonshape"
            android:paddingBottom="15dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="15dp"
            android:shadowColor="#ff888888"
            android:shadowRadius="5"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textColor="#FFFFFFFF"
            android:textSize="35sp" />

 <RelativeLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignBottom="@id/mm_btn"
     android:layout_alignParentRight="true"
     android:layout_alignTop="@id/mm_btn"
     android:layout_toRightOf="@+id/mm_btn"
     android:gravity="center" >

     <com.google.android.gms.ads.AdView
         android:id="@+id/adView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="20dp"
         ads:adSize="BANNER"
         ads:adUnitId="@string/banner_ad_unit_id" >
     </com.google.android.gms.ads.AdView>

 </RelativeLayout>
    
</RelativeLayout>
        </RelativeLayout>
    
</RelativeLayout>