
   <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
       android:id="@+id/linear"
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
       android:background="@drawable/main_bg"
       android:orientation="vertical" >

       <RelativeLayout
           android:id="@+id/r1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentRight="true" >

           <Button
               android:id="@+id/mute_button"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:background="@drawable/mute_button" />

       </RelativeLayout>

       <RelativeLayout
           android:id="@+id/r2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerHorizontal="true" >

           <ImageView
               android:id="@+id/title_img"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="25dp" />

       </RelativeLayout>

       <RelativeLayout
           android:id="@+id/r3"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_below="@id/r2"
           android:layout_centerInParent="true"
           android:paddingTop="30dp" >

           <ScrollView
               android:id="@+id/scrollView1"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginRight="0dp"
               android:scrollbars="none" >

               <LinearLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:background="@drawable/btn"
                   android:gravity="center"
                   android:orientation="vertical"
                   android:paddingBottom="20dp"
                   android:paddingLeft="20dp"
                   android:paddingRight="25dp"
                   android:paddingTop="30dp" >

                   <RelativeLayout
                       android:id="@+id/start_view"
                       android:layout_width="250dp"
                       android:layout_height="75dp" >

                       <Button
                           android:id="@+id/mm_btn"
                           style="@drawable/buttonshape"
                           android:layout_width="fill_parent"
                           android:layout_height="fill_parent"
                           android:background="@drawable/buttonshape"
                           android:shadowColor="#ff888888"
                           android:shadowRadius="5"
                           android:text="@string/start_game"
                           android:textColor="#FFFFFFFF"
                           android:textSize="25sp" />
                   </RelativeLayout>

<RelativeLayout
    android:id="@+id/sign_in_view"
    android:layout_width="250dp"
    android:layout_height="75dp" >

    <Button
        android:id="@+id/sign_in_button"
        style="@drawable/buttonshape"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/buttonshape"
        android:shadowColor="#ff888888"
        android:shadowRadius="5"
        android:textColor="#FFFFFFFF"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/did_you_enjoy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/sign_in"
        android:textColor="#ffffff"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@id/did_you_enjoy"
        android:paddingRight="10dp"
        android:src="@drawable/ic_play_games_badge_green" />

                   </RelativeLayout>
                   
                   <RelativeLayout
                       android:id="@+id/setting_view"
                       android:layout_width="250dp"
                       android:layout_height="75dp" >

                       <Button
                           android:id="@+id/settings_btn"
                           style="@drawable/buttonshape"
                           android:layout_width="fill_parent"
                           android:layout_height="fill_parent"
                           android:layout_alignParentLeft="true"
                           android:layout_alignParentTop="true"
                           android:background="@drawable/buttonshape"
                           android:shadowColor="#ff888888"
                           android:shadowRadius="5"
                           android:text="@string/upgrade_ship"
                           android:textColor="#FFFFFFFF"
                           android:textSize="25sp" />
                   </RelativeLayout>
                   <RelativeLayout
    android:id="@+id/achievements_view"
    android:layout_width="250dp"
    android:layout_height="75dp" >

    <Button
        android:id="@+id/achievemnts_button"
        style="@drawable/buttonshape"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/buttonshape"
        android:shadowColor="#ff888888"
        android:shadowRadius="5"
        android:textColor="#FFFFFFFF"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/achievements_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/achievements"
        android:textColor="#ffffff"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/achievemnts_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@id/achievements_txt"
        android:paddingRight="10dp"
        android:src="@drawable/ic_play_games_badge_achievements_green" />

                   </RelativeLayout>

                   <RelativeLayout
                       android:id="@+id/exit_view"
                       android:layout_width="250dp"
                       android:layout_height="75dp" >

                       <Button
                           android:id="@+id/exit_btn"
                           style="@drawable/buttonshape"
                           android:layout_width="fill_parent"
                           android:layout_height="fill_parent"
                           android:layout_alignParentLeft="true"
                           android:layout_alignParentTop="true"
                           android:background="@drawable/buttonshape"
                           android:shadowColor="#ff888888"
                           android:shadowRadius="5"
                           android:text="@string/exit"
                           android:textColor="#FFFFFFFF"
                           android:textSize="25sp" />
                   </RelativeLayout>
               </LinearLayout>
           </ScrollView>

       </RelativeLayout>

    </RelativeLayout>
    
   <!--    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" >
    </com.google.android.gms.ads.AdView> -->
	